# rs-simple-hello-world

./: Cargo.toml  README.md
src/: main.rs
