[package]
name = "hello_world"
version = "0.1.0"
authors = ["Michael Bruno <12646562+mbround18@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
